# vemetric-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-checks.yml  release.yml
examples/: basic.py
src/vemetric/: __init__.py  _version.py  client.py  test_client.py
tests/: test_client.py
