[project]
name            = "vemetric"
version         = "0.0.3"
description     = "Official Python SDK for Vemetric"
readme          = "README.md"
authors         = [{ name="Vemetric", email="info@vemetric.com" }]
license         = { text = "MIT" }
requires-python = ">=3.9"
dependencies    = ["requests>=2.27"]

[project.urls]
Homepage    = "https://vemetric.com"
Source      = "https://github.com/Vemetric/vemetric-python"
Tracker     = "https://github.com/Vemetric/vemetric-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "requests-mock>=1.11",
]